clean up and html changes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
+<img src="/assets/images/hero.jpeg">
 <h1 align="center">Welcome to Frontier Car Rental</h1>
 <p align="center"><a href="/users/new">Register</a>&nbsp;&nbsp;&nbsp;<a href="/cars">Car fleet</a></p>
