--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 
 <meta name=viewport content="width=device-width, initial-scale=1">
-<h1 align="center">Welcome to Frontier Car Rental</h1>
+<ul id="hero"></ul>
+<h1 align="center">Where are you going next?</h1>
 <p align="center"><a href="/users/new">Register</a>&nbsp;&nbsp;&nbsp;<a href="/cars/new">List your Car</a></p>
-<ul id="bkgnd"></ul>
+
