--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,11 @@
 
 <meta name=viewport content="width=device-width, initial-scale=1">
-<ul id="hero"></ul>
+<div class="header">
+<a class="active" href="/index">Home</a>
+<a class="nav" href="/users/new">Register</a>
+<a class="nav" href="/cars/new">List your Car</a>
+</div>
+<img class="hero" src="/assets/hero.jpg" alt="Hero">
 <h1 align="center">Where are you going next?</h1>
 <p align="center"><a href="/users/new">Register</a>&nbsp;&nbsp;&nbsp;<a href="/cars/new">List your Car</a></p>
 
