changes to index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,13 @@
 	background-color: white;
 }
 
+body {
+    font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+    margin: 0;
+    color: #000;
+    background: #fff;
+}
+
 .nav {
     margin-left: 3%;
     font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
