--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 
 <meta name=viewport content="width=device-width, initial-scale=1">
+<body>
 <div class="header">
 <a class="active" href="/index">Home</a>
 <a class="nav" href="/users/new">Register</a>
@@ -7,5 +8,5 @@
 </div>
 <img class="hero" src="/assets/hero.jpg" alt="Hero">
 <h1 align="center">Where are you going next?</h1>
-<p align="center"><a href="/users/new">Register</a>&nbsp;&nbsp;&nbsp;<a href="/cars/new">List your Car</a></p>
+</body>
 
