--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,8 +57,9 @@ h1{
 	font-size: 36px;
 	font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
 	line-height: 40px;
-	margin-top: -100px;
+	margin-top: -200px;
 	color: white; 
+	z-index: 1;
 }
 
  a{
