changes to index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,6 +60,7 @@ h1{
 	font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
 	line-height: 40px;
 	margin-top: -200px;
+	position: relative;
 	color: white; 
 	z-index: 1;
 }
