--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,11 +2,12 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 <body>
 <div class="header">
-<a class="active" href="/index">Home</a>
-<a class="nav" href="/users/new">Register</a>
-<a class="nav" href="/cars/new">List your Car</a>
+<a class="active" align="right" href="/index">Home</a>
+<a class="nav" align="left" href="/users/new">Register</a>
+<a class="nav" align="left" href="/cars/new">List your Car</a>
 </div>
 <img class="hero" src="/assets/hero.jpg" alt="Hero">
 <h1 align="center">Where are you going next?</h1>
+<input type="text" name="location" placeholder="Destination, city, address" autocomplete="off" id="search-location" value="">
 </body>
 
