--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -14,3 +14,33 @@ img.hero {
 	position: relative;
 	width: 100%;
 }
+
+h1{
+	font-size: 56px;
+	font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+	line-height: 40px;
+	margin-top: -2000px;
+	position: relative;
+	color: white; 
+	z-index: 1;
+}
+
+input[type=text] {
+		padding-left: 20px;
+		padding-bottom: 5px;
+		padding-right: 20px;
+		padding-top: 5px;
+		margin-left: 0;
+		margin-bottom: 27px;
+		margin-right: 0;
+		margin-top: 5px;
+		width: 50%;
+		font-size: 100%;
+		font-family: avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+    	display: inline-block;
+    	border: 2px solid #ccc;
+    	border-radius: 5px;
+    	box-sizing: border-box;
+    	z-index: 1;
+    	position: relative;
+}
