--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,8 @@
 </div>
 <img class="hero" src="/assets/hero.jpg" alt="Hero">
 <h1 align="center">Where are you going next?</h1>
+<div class="wrapper">
 <input type="text" name="location" placeholder="Destination, city, address" autocomplete="off" id="search-location" value="">
+</div>
 </body>
 
