changes to index

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -19,9 +19,10 @@ h1{
 	font-size: 56px;
 	font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
 	line-height: 40px;
-	margin-top: -800px;
+	margin-top: -55%;
 	position: relative;
 	color: white; 
+	text-shadow: 2px 2px 8px grey;
 	z-index: 1;
 }
 
