--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,12 @@
+<body>
+<div class="header">
+<a class="nav" align="right" href="/index">Home</a>
+<a class="nav" align="left" href="/users/new">Register</a>
+<a class="active" align="left" href="/cars/new">List your Car</a>
+</div>
 <h1>New User</h1>
 
 <%= render 'form', user: @user %>
 
 <%= link_to 'Back', "/" %>
+</body>
