changes to cars & users

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,57 @@
+<head>
+	<style type="text/css">
+		a{
+	font-size: 18px;
+}
 
-<meta name=viewport content="width=device-width, initial-scale=1">
+img.hero {
+	margin-top: 2%;
+	margin-left: 0px;
+	margin-right: 0px;
+	z-index: 0;
+	position: relative;
+	width: 100%;
+}
+
+h1{
+	font-size: 56px;
+	font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+	line-height: 40px;
+	margin-top: -55%;
+	position: relative;
+	color: white; 
+	text-shadow: 2px 2px 8px grey;
+	z-index: 1;
+}
+
+.wrapper{
+	text-align: center;
+}
+
+input[type=text] {
+		padding-left: 20px;
+		padding-bottom: 5px;
+		padding-right: 20px;
+		padding-top: 5px;
+		margin-left: 0;
+		margin-bottom: 27px;
+		margin-right: 0;
+		margin-top: 5px;
+		width: 50%;
+		font-size: 100%;
+		font-family: avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+    	display: inline-block;
+    	border: 2px solid #ccc;
+    	border-radius: 5px;
+    	box-sizing: border-box;
+    	position: relative;
+    	z-index: 1;
+    	
+}
+	</style>
+	<meta name=viewport content="width=device-width, initial-scale=1">
+</head>
+
 <body>
 <div class="header">
 <a class="active" align="right" href="/index">Home</a>
