changes to cars & users

--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -4,9 +4,11 @@
 <a class="nav" align="left" href="/users/new">Register</a>
 <a class="active" align="left" href="/cars/new">List your Car</a>
 </div>
+<div class="wrapper">
 <h1>New Car</h1>
 
 <%= render 'form', car: @car %>
 
 <%= link_to 'Back', cars_path %>
+</div>
 </body>
