--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,11 @@
 <a class="nav" align="left" href="/users/new">Register</a>
 <a class="active" align="left" href="/cars/new">List your Car</a>
 </div>
+<div class="wrapper">
 <h1>New User</h1>
 
 <%= render 'form', user: @user %>
 
 <%= link_to 'Back', "/" %>
+</div>
 </body>
