changes to cars & users

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <body>
 <div class="header">
 <a class="nav" align="right" href="/index">Home</a>
-<a class="nav" align="left" href="/users/new">Register</a>
-<a class="active" align="left" href="/cars/new">List your Car</a>
+<a class="active" align="left" href="/users/new">Register</a>
+<a class="nav" align="left" href="/cars/new">List your Car</a>
 </div>
 <div class="wrapper">
 <h1>New User</h1>
