--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,7 +50,7 @@ input[type=text] {
 
 <body>
 <div class="header">
-<a class="active" align="right" href="/index">Home</a>
+<a class="active" align="right" href="/">Home</a>
 <a class="nav" align="left" href="/users/new">Register</a>
 <a class="nav" align="left" href="/cars/new">List your Car</a>
 </div>
