changes to nav bar

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -50,9 +50,9 @@ input[type=text] {
 
 <body>
 <div class="header">
-<a class="active" align="right" href="/">Home</a>
-<a class="nav" align="left" href="/users/new">Register</a>
-<a class="nav" align="left" href="/cars/new">List your Car</a>
+<a class="active" href="/">Home</a>
+<a class="nav" href="/users/new">Register</a>
+<a class="nav" href="/cars/new">List your Car</a>
 </div>
 <img class="hero" src="/assets/hero.jpg" alt="Hero">
 <h1 align="center">Where are you going next?</h1>
