--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,8 +1,8 @@
 <body>
 <div class="header">
-<a class="nav" align="right" href="/">Home</a>
-<a class="nav" align="left" href="/users/new">Register</a>
-<a class="active" align="left" href="/cars/new">List your Car</a>
+<a class="nav" href="/">Home</a>
+<a class="nav" href="/users/new">Register</a>
+<a class="active" href="/cars/new">List your Car</a>
 </div>
 <div class="wrapper">
 <br>
