--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -5,8 +5,8 @@
 <a class="nav" href="/users/new">Register</a>
 <a class="active" href="/cars/new">List your Car</a>
 </div>
-<svg height="5" width=100%>
-  <line x1="0" y1="0" x2=100% y2="0" style="stroke:lightgrey;stroke-width:2" />
+<svg height=2em width=100%>
+  <line x1=0 y1=2em x2=100% y2=2em style="stroke:lightgrey;stroke-width:2" />
   Sorry, your browser does not support inline SVG.
 </svg>
 <div class="wrapper">
