--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,16 @@
+<head>
+  <style type="text/css">
+    img.search{
+      margin-top: 2em;
+      margin-left: 0px;
+      margin-right: 0px;
+      z-index: 0;
+      position: relative;
+      width: 100%;
+    }
+  </style>
+</head>
+
 <body>
 <div class="header">
 <a class="nav" href="/">Home</a>
@@ -9,15 +22,6 @@
   <line x1=0 y1=2em x2=100% y2=2em style="stroke:lightgrey;stroke-width:2" />
   Sorry, your browser does not support inline SVG.
 </svg>
-<div class="wrapper">
-<br>
-<br>
-<br>
-<br>
-<h1>New User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', "/" %>
+<img class="search" src="/assets/search.jpg" alt="Search">
 </div>
 </body>
