--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,6 @@
 <head>
-  <style type="text/css">
+  <link href="application.scss" type="text/css" />
+  <style>
     img.search{
       margin-top: 2em;
       margin-left: 0px;
@@ -14,8 +15,8 @@
 <body>
 <div class="header">
 <a class="nav" href="/">Home</a>
-<a class="nav" href="/search">Search</a>
-<a class="active" href="/users/new">Register</a>
+<a class="active" href="/search">Search</a>
+<a class="nav" href="/users/new">Register</a>
 <a class="nav" href="/cars/new">List your Car</a>
 </div>
 <svg height=3em width=100%>
