--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <head>
-	<style type="text/css">
-		a{
+	<link href="application.scss" type="text/css" />
+	<style>
+a{
 	font-size: 18px;
 }
 
@@ -44,7 +45,7 @@ input[type=text] {
     	z-index: 1;
     	
 }
-	</style>
+</style>
 </head>
 
 <body>
