--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,8 @@
 */
 
 .header {
-	padding-bottom: 1em;
-	padding-top: 0;
+	padding-bottom: 0;
+	padding-top: 1em;
 	text-align: center;
 	width: 100%;
 	z-index: 2;
