--- a/frontierMac/app/views/devise/registrations/new.html.erb
+++ b/frontierMac/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
@@ -25,7 +25,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
@@ -33,7 +33,7 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+<br>
+<p>Already have an Account?  <%= link_to "Log in", new_session_path(resource_name) %></p>
 </div>
 </body>
