--- a/frontierMac/app/assets/stylesheets/scaffolds.scss
+++ b/frontierMac/app/assets/stylesheets/scaffolds.scss
@@ -1,8 +1,7 @@
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+  font-size: 16px;
   line-height: 18px;
-  margin: 33px;
 }
 
 pre {
@@ -23,20 +22,52 @@ td {
 
 div {
   &.field, &.actions {
-    margin-bottom: 10px;
+    z-index: 0;
+    margin-bottom: 0px;
   }
   &.layout{
-    margin-top: 2%;
-    margin-left: 0px;
-    margin-right: 0px;
-    text-align: center;
-    position: relative;
+    padding-top: 6em;
+    margin: auto;
+    width: 60%;
     z-index: 0;
   }
 }
 
 #notice {
   color: green;
+}
+
+.field input{
+  padding-left: 20px;
+    padding-bottom: 5px;
+    padding-right: 20px;
+    padding-top: 5px;
+    margin-left: 0;
+    margin-bottom: 27px;
+    margin-right: 0;
+    margin-top: 5px;
+    width: 100%;
+    font-size: 100%;
+    font-family: avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+}
+
+.actions input{
+  padding-bottom: 8px;
+    padding-top: 8px;
+    margin-top: 17px;
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 125%;
+    color: white;
+    font-family: avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+      background-color: #0A60FF;
+      border: none;
+      -webkit-appearance: none;
+      border-radius: 7px;
 }
 
 .field_with_errors {
@@ -54,14 +85,14 @@ div {
   background-color: #f0f0f0;
 
   h1{
-  font-size: 56px;
-  font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
-  line-height: 40px;
-  margin-top: -55%;
-  position: relative;
-  color: white; 
-  text-shadow: 2px 2px 8px grey;
-  z-index: 1;
+    font-size: 56px;
+    font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+    line-height: 40px;
+    margin-top: -55%;
+    position: relative;
+    color: white; 
+    text-shadow: 2px 2px 8px grey;
+    z-index: 0;
   }
 
   h2 {
@@ -114,7 +145,7 @@ hr.header-line {
   color: black;
 }
 
-.active {
+a.active {
   margin-left: 3%;
   font-family: Avenir, "Lucida Grande", Verdana, Arial, sans-serif;
   margin-right: 3%;
@@ -128,9 +159,16 @@ a.nav:hover {
   color: #007AFF;
 }
 
- a{
-  font-size: 18px;
+ a.link{
+  font-size: 16px;
+  color: #007AFF;
+  text-decoration: none;
  }
+
+a.link:visited{
+  color: #007AFF;
+  text-decoration: none;
+}
 
  .wrapper{
   text-align: center;
