--- a/frontierMac/app/views/devise/registrations/edit.html.erb
+++ b/frontierMac/app/views/devise/registrations/edit.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it, 6 characters minimum)</i>
+    <%= f.label :password, "Password (6 characters minimum)" %> <i>(leave blank if you don't want to change it)</i>
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
