--- a/frontierMac/app/views/cars/edit.html.erb
+++ b/frontierMac/app/views/cars/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Car</h1>
-
+<body>
+<div class="header">
+<a class="nav" href="/">Home</a>
+<a class="nav" href="/search">Search</a>
+<% if user_signed_in? %>
+  <%= link_to('Profile', edit_user_registration_path, class: "nav") %>
+  <%= link_to 'List Car', new_car_path, class: "active"%>
+  <%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "nav") %>      
+<% else %>
+  <%= link_to('Register', new_user_registration_path, class: "nav") %>
+  <%= link_to('Log In', new_user_session_path, class: "nav")%> 
+<% end %>
+<hr class="header-line">
+</div>
 <%= render 'form', car: @car %>
-
-<%= link_to 'Show', @car %> |
-<%= link_to 'Back', cars_path %>
+</body>
