--- a/frontierMac/app/views/cars/show.html.erb
+++ b/frontierMac/app/views/cars/show.html.erb
@@ -1,3 +1,18 @@
+<body>
+<div class="header">
+<a class="nav" href="/">Home</a>
+<a class="nav" href="/search">Search</a>
+<% if user_signed_in? %>
+  <%= link_to('Profile', edit_user_registration_path, class: "nav") %>
+  <%= link_to 'List Car', new_car_path, class: "active"%>
+  <%= link_to('Log Out', destroy_user_session_path, :method => :delete, class: "nav") %>      
+<% else %>
+  <%= link_to('Register', new_user_registration_path, class: "nav") %>
+  <%= link_to('Log In', new_user_session_path, class: "nav")%> 
+<% end %>
+<hr class="header-line">
+</div>
+<div class="layout" align="center">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -21,7 +36,7 @@
 </p>
 
 <p>
-  <strong>Price:</strong>
+  <strong>Price (in $):</strong>
   <%= @car.price %>
 </p>
 
@@ -31,4 +46,6 @@
 </p>
 
 <%= link_to 'Edit', edit_car_path(@car) %> |
-<%= link_to 'Back', cars_path %>
+<%= link_to 'Back', new_car_path %>
+</div>
+</body>
