--- a/frontierMac/app/views/devise/registrations/new.html.erb
+++ b/frontierMac/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <body>
 <div class="header">
-<a class="nav" href="/">Home</a>
-<a class="nav" href="/search">Search</a>
+<a class="nav" href="/"><img class="imgnav" src="/assets/frontierAlt.svg"></a>
 <a class="active" href="/users/sign_up">Register</a>
 <a class="nav" href="/users/sign_in">Log In</a>
 <hr class="header-line">
