--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,6 +35,13 @@ h1{
 	z-index: 1;
 }
 
+@media only screen and (max-width: 1000px) {
+    /* For mobile phones: */
+    h1{
+        font-size: 32px;
+    }
+}
+
 input[type=text] {
 		padding-left: 20px;
 		padding-bottom: 5px;
