File endings chnaged during assets compilation

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -61,7 +61,7 @@ input[type=text] {
 <% end %>
 <hr class="header-line">
 </div>
-<img class="hero" src="/assets/hero.JPG" alt="Hero">
+<img class="hero" src="/assets/hero.jpg" alt="Hero">
 <h1 align="center">Where are you going next?</h1>
 <div class="wrapper">
 <form action="/search">
